--- a/build.yaml
+++ b/build.yaml
@@ -18,4 +18,4 @@ include:
   - board: nice_nano_v2
     shield: dilemma_right nice_view_adapter nice_view
   - board: nice_nano_v2
-    shield: settings_reset
+    shield: settings_reset nice_view_adapter nice_view
