--- a/config/boards/shields/dilemma/dilemma.dtsi
+++ b/config/boards/shields/dilemma/dilemma.dtsi
@@ -1,6 +1,6 @@
 /*
  * Copyright (c) 2022 The ZMK Contributors
- *
+ * zephyr,display = &oled;
  * SPDX-License-Identifier: MIT
  */
 
@@ -9,7 +9,8 @@
 
 / {
 	chosen {
-		zephyr,display = &oled;
+		
+		zephyr,display = &nice_view;
 		zmk,underglow = &led_strip;
 		zmk,kscan = &kscan0;
 		zmk,matrix_transform = &default_transform;
@@ -49,22 +50,14 @@ RC(3,0) RC(3,1) RC(3,2) RC(3,3) RC(3,4) RC(3,5)  RC(3,6)  RC(3,7) RC(3,8) RC(3,9
 
 };
 
-&pro_micro_i2c {
+&nice_view_spi {
 	status = "okay";
-
-	oled: ssd1306@3c {
-		compatible = "solomon,ssd1306fb";
-		reg = <0x3c>;
+	nice_view: ls0xx@0 {
+		compatible = "sharp,ls0xx";
 		label = "DISPLAY";
-		width = <128>;
-		height = <32>;
-		segment-offset = <0>;
-		page-offset = <0>;
-		display-offset = <0>;
-		multiplex-ratio = <31>;
-		segment-remap;
-		com-invdir;
-		com-sequential;
-		prechargep = <0x22>;
+		spi-max-frequency = <1000000>;
+		reg = <0>;
+		width = <160>;
+		height = <68>;
 	};
 };
