--- a/config/boards/shields/dilemma/dilemma.dtsi
+++ b/config/boards/shields/dilemma/dilemma.dtsi
@@ -10,7 +10,7 @@
 / {
 	chosen {
 		
-		zephyr,display = &nice_view;
+		zephyr,display = &oled;
 		zmk,underglow = &led_strip;
 		zmk,kscan = &kscan0;
 		zmk,matrix_transform = &default_transform;
@@ -50,14 +50,22 @@ RC(3,0) RC(3,1) RC(3,2) RC(3,3) RC(3,4) RC(3,5)  RC(3,6)  RC(3,7) RC(3,8) RC(3,9
 
 };
 
-&nice_view_spi {
+&pro_micro_i2c {
 	status = "okay";
-	nice_view: ls0xx@0 {
-		compatible = "sharp,ls0xx";
+
+	oled: ssd1306@3c {
+		compatible = "solomon,ssd1306fb";
+		reg = <0x3c>;
 		label = "DISPLAY";
-		spi-max-frequency = <1000000>;
-		reg = <0>;
-		width = <160>;
-		height = <68>;
+		width = <128>;
+		height = <32>;
+		segment-offset = <0>;
+		page-offset = <0>;
+		display-offset = <0>;
+		multiplex-ratio = <31>;
+		segment-remap;
+		com-invdir;
+		com-sequential;
+		prechargep = <0x22>;
 	};
 };
